# plex-sync

./: .gitignore  AGENTS.md  CLAUDE.md  CRUSH.md  README.md  config_example.yml  last_sync.json  pyproject.toml  setup.py
plex_sync/: config.py  main.py  movie_size.py  radarr.py  show_size.py  sonarr.py
