[project]
name = "plex-sync"
version = "0.1.0"
description = "A tool to manage and sync Plex content"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plexapi>=4.15.15",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "textual>=6.4.0",
    "requests>=2.31.0",
]

[project.scripts]
plex-sync = "plex_sync.main:cli"
plex-movie-size = "plex_sync.movie_size:cli"
plex-show-size = "plex_sync.show_size:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
